--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,9 @@ apollo = "3.7.3"
 appcompat = "1.6.1"
 material = "1.10.0"
 chucker = "4.0.0"
-
+customactivityoncrash = "2.4.0"
+activity = "1.9.3"
+constraintlayout = "2.1.4"
 
 [libraries]
 retrofitt = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlin-coroutines-adapter", version = "0.9.2" }
@@ -60,6 +62,9 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 chucker-debug = { group = "com.github.chuckerteam.chucker", name = "library", version.ref = "chucker" }
 chucker-release = { group = "com.github.chuckerteam.chucker", name = "library-no-op", version.ref = "chucker" }
+custom-activity-crash = { group = "cat.ereza", name = "customactivityoncrash", version.ref = "customactivityoncrash" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
